# Shallowing-NN

./: .gitignore  README.md  main.py  pyproject.toml
src/Cofigs/: configs.py
src/Config/: config.py
src/DNN/: deep_nn.py
src/Deep_nn/: Deep_nn.py
src/Dnn/: deep_nn.py
src/Plot/: plot.py
src/Shallow_nn/: Shallow_nn.py  deep_nn.py  shallow_nn.py
src/train/: train_model.py
